Fix off-canvas menu not fitting narrow screens
FGV-204 #time 36m #review

--- a/_source/stylesheets/layout/_header.scss
+++ b/_source/stylesheets/layout/_header.scss
@@ -8,6 +8,10 @@
  *
  * Within any `document` or `application`, the author **SHOULD** mark no more than one element with the `banner` role.
  */
+.site-header {
+	position: relative;
+}
+
 [role='banner'] {
 	position: absolute;
 	left: 50%;
